<package>
  <name>rxbag_plugins</name>
  <version>0.0.1</version>
  <description>


<p>rxbag_plugins contains plugins for the <a href="/wiki/rxbag">rxbag</a> GUI tool.</p>
<p><a href="/wiki/rxbag">rxbag</a> is a graphical framework for analyzing <a href="/wiki/Bags">bag</a> (log) files. rxbag_plugins provide visualizers for <a href="/wiki/Messages">messages</a> of different types.</p>
<p>Some icons from the Silk icon pack are used, which is available from <a href="http://www.famfamfam.com/lab/icons/silk/">famfamfam.com</a>.</p>

  </description>
  <author>Tim Field</author>
  <maintainer email="sampfeiffer@pal-robotics.com">Sammy Pfeiffer</maintainer>
  <license>BSD, Creative Commons</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rxbag</build_depend>

  <run_depend>rxbag</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>rospy</run_depend>

  <export>
    <rxbag plugin="${prefix}/plugin.xml"/>
  </export>

</package>
